new scheme structure added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '828934577491695');
         fbq('track', 'PageView');
+        fbq('track', 'ViewContent', {
+            content_ids: ['home__about']
+        });
     </script>
     <noscript><img height="1" width="1" style="display:none"
                    src="https://www.facebook.com/tr?id=828934577491695&ev=PageView&noscript=1"
@@ -38,6 +41,7 @@
             <ul class="menu header__menu">
                 <li class="header__menu-item" data-part="home">Home</li>
                 <li class="header__menu-item" data-part="aims">Aims</li>
+                <li class="header__menu-item" data-part="scheme">Scheme</li>
                 <li class="header__menu-item" data-part="mission">Mission</li>
                 <li class="header__menu-item" data-part="about">About</li>
                 <li class="header__menu-item" data-part="contacts">Contacts</li>
@@ -64,11 +68,153 @@
             <p>solution for you</p>
         </div>
     </section>
+    <div class="home__scheme">
+        <h1>Scheme</h1>
+        <div class="home__scheme-content">
+            <div class="home__scheme-row">
+                <div class="home__scheme-column"></div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Incoming requests</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column"></div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                <div class="home__scheme-arrows home__scheme-arrows--type1"></div>
+                <div class="home__scheme-arrows home__scheme-arrows--type2"></div>
+            </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">General request</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Package service</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Emergency</div>
+                            </div>
+                </div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type3"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Customer appeal</div>
+                                <div class="home__scheme-block-text">Appeal by phone, email, personal talk, recommendation, socials</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Dedicated teams creation</div>
+                                <div class="home__scheme-block-text">ready all the time</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Opportunities analysis</div>
+                                <div class="home__scheme-block-text">systems credentials, consequences and results discussion</div>
+                            </div>
+                </div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type3"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Problem statement</div>
+                                <div class="home__scheme-block-text">If it's clear vision or  just results understanding</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Possible tasks analysis</div>
+                                <div class="home__scheme-block-text">Which of the facilities require monitoring, analysis and scheduled actions or control</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Solving problem</div>
+                                <div class="home__scheme-block-text">Actions directed to resolve incorrect work of the systems</div>
+                            </div>
+                </div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type4"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Discussion</div>
+                                <div class="home__scheme-block-text">Finding out the details</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Schedule</div>
+                                <div class="home__scheme-block-text">plan where the development and reports are scheduled</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column"></div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type4"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Work analysis</div>
+                                <div class="home__scheme-block-text">Usable technologies and services definition. Implementation phases time estimation</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Tasks cycle start</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column"></div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type5"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">Coordination</div>
+                                <div class="home__scheme-block-text">implementation readiness reporting, with phases description for tracking</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column"></div>
+                <div class="home__scheme-column"></div>
+            </div>
+            <div class="home__scheme-arrows-row">
+                    <div class="home__scheme-arrows home__scheme-arrows--type5"></div>
+                </div>
+            <div class="home__scheme-row">
+                <div class="home__scheme-column">
+                        <div class="home__scheme-block">
+                                <div class="home__scheme-block-title">In process</div>
+                                <div class="home__scheme-block-text">from phase to phase implementation with reporting</div>
+                            </div>
+                </div>
+                <div class="home__scheme-column"></div>
+                <div class="home__scheme-column"></div>
+            </div>
+        </div>
+    </div>
     <section class="home__mission">
         <h1>Our Mission</h1>
         <p>Is to promote new technological and software solutions for the best interaction of systems both within companies and the interaction of these systems with the outside world.</p>
     </section>
-    <section class="home__about">
+    <section class="home__about" id="home__about">
         <h1>About</h1>
         <p>We are group of different, experienced people gathered together, united to contribute to the improvement of both the technological world and the world as a whole</p>
     </section>
